--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-    "name": "hypers-drive-game",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "preview": "vite preview",
-        "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,md,yaml,yml}'",
-        "format:check": "prettier --check '**/*.{js,jsx,ts,tsx,json,md}'"
-    },
-    "devDependencies": {
-        "typescript": "^4.9.3",
-        "vite": "^4.1.0"
-    },
-    "dependencies": {
-        "kaboom": "^2000.2.10",
-        "prettier": "^2.8.3"
-    }
+  "name": "hypers-drive-game",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,md,yaml,yml}'",
+    "format:check": "prettier --check '**/*.{js,jsx,ts,tsx,json,md}'"
+  },
+  "devDependencies": {
+    "typescript": "^4.9.3",
+    "vite": "^4.1.0"
+  },
+  "dependencies": {
+    "kaboom": "next",
+    "prettier": "^2.8.3"
+  }
 }
