--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^4.1.0"
   },
   "dependencies": {
+    "bezier-easing": "^2.1.0",
     "kaboom": "next",
     "prettier": "^2.8.3"
   }
